# Tensor-Coherent-Control-and-Lindblad-Noise-Modelling-Stack-with-Gate-Level-Verification-Benchmarks

./: README.md  pyproject.toml
src/qip/: README.md  __init__.py  cli.py
src/qip/case_studies/: __init__.py  datasets.py  parameters.py  reports.py  sc_qubit_end_to_end.py
src/qip/circuits/: __init__.py  circuits.py  compilation.py  gates.py  models.py  simulation.py  transpile.py
src/qip/control/: calibration.py  controls.py  optimal.py  pulses.py
src/qip/core/: cache.py  config.py  linalg.py  types.py  units.py
src/qip/data/superconducting_qubit/: README.md  calibration.json  noise_psd.csv
src/qip/devices/: abstract_device.py  neutral_atom.py  photonic.py  superconducting.py  trapped_ion.py
src/qip/docs/qip_guide/: README.md  macros.tex  main.tex  preamble.tex
src/qip/docs/qip_guide/sections/: 00_scope.tex  01_math_core.tex  02_state_operator_api.tex  03_dynamics_solvers.tex  04_control_stack.tex  05_noise_stack.tex  06_device_adapters.tex  07_benchmarking.tex  09_performance.tex  (+5 more)
src/qip/dynamics/: adiabatic.py  hamiltonian.py  lindblad.py  propagators.py  solvers.py
src/qip/metrics/: benchmarking.py  fidelity.py  leakage.py
src/qip/noise/: channels.py  identification.py  models.py  spectra.py
src/qip/operators/: basis.py  operator.py  pauli.py  sparse.py
src/qip/states/: density.py  state.py  tomography.py
src/qip/tests/: test_channels.py  test_circuits.py  test_end_to_end_sc_qubit.py  test_fidelity.py  test_linalg.py  test_propagators.py
src/qip/viz/: plots.py  styles.py
src/qip/workflows/: experiments.py  pipelines.py  reports.py
